crates/rome_js_formatter/tests/specs/prettier/js/arrows/newline-before-arrow/newline-before-arrow.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: newline-before-arrow.js

---
# Input
```js
async x
=> x

```

# Output
```js
async;
x;
=> x

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ newline-before-arrow.js:1:7
  │
1 │ async x
  │ ------^
  │ │     │
  │ │     An explicit or implicit semicolon is expected here...
  │ ...Which is required to end this statement

error[SyntaxError]: expected a statement but instead found '=> x'
  ┌─ newline-before-arrow.js:2:1
  │
2 │ => x
  │ ^^^^ Expected a statement here


```


